# fea-in-jax-msg

./: .gitignore  Google_collab_instructions.txt  Installation.txt  README.md  conda_activate.txt  environment.yml  pyproject.toml  requirements.txt
fe_jax/: __init__.py  basis_quadrature.py  fea.py  hyperelasticity.py  linear_elasticity.py  nodefix_JAX_BICGoptimize (1).py  periodic_dofmap_pardiso.py  sc_to_msh.py  setup.py  solve_cg.py  utils.py
msg_akshat/: JAX_3dmodel_2D3D_ver2.py  JAX_BICGoptimize_current.py  helper.py  sg_mesh.msh
msg_akshat/Sandwich_SC_files/: SW_2UC_45.sc
src/fe_jax/: __init__.py  basis_quadrature.py  fea.py  linear_elasticity.py  np_types.py  profiling.py  setup.py  sparse_linear_solve.py  utils.py
tests/: benchmark_build_row_ind_variants.py  fea_traditional.py  helper.py  kernels.py  test_basix_interface.py  test_fea_scaling.py  test_fea_solve.py  test_fea_vmap.py  test_jacobian_polynomial.py  test_kernels.py  test_maps.py  test_memory_profiler.py  test_microscale_bvp.py  test_multiscale_prnn.py  test_residual_evaluation.py  test_simple_fea_residual_jacobian.py  test_simple_fea_solve.py  test_solve_cg.py  test_solve_w_constraints.py  test_sparse.py  test_uniform_grid.py
tests/exploring_jax/: jit_args.py  no_copy_mpi_shard.py  no_copy_parallel_matvec.py  no_copy_vector_shard.py  parallel_sparse_matvec.py  parallelism.py  while_loop.py
tests/meshes/: create_rectangle_w_hole_mesh.py  create_retangular_mesh.py  create_simple_microscale_mesh.py  create_test_meshes.py  microscale_2D.msh  rectangle.vtk  (+16 more)
timings/: batched_jit_study.ipynb
(+34 files in other folders)
